--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "vue-datepicker-next": "^1.0.3",
     "vue-loading-overlay": "^4.0.4",
     "vue-router": "4.0.5",
+    "vue-sweetalert2": "^5.0.11",
     "vue3-editor": "^0.1.1",
+    "vue3-tel-input": "^1.0.4",
     "vue3-toastify": "^0.2.3",
     "vue3-treeselect": "^0.1.0"
   },
