--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "vue-loading-overlay": "^4.0.4",
     "vue-router": "4.0.5",
     "vue-sweetalert2": "^5.0.11",
+    "vue3-carousel": "^0.15.0",
     "vue3-editor": "^0.1.1",
     "vue3-tel-input": "^1.0.4",
     "vue3-toastify": "^0.2.3",
