--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@popperjs/core": "2.9.1",
     "@primevue/themes": "^4.1.0",
+    "@stripe/stripe-js": "^7.3.1",
     "@tailwindcss/forms": "0.2.1",
     "@vee-validate/rules": "^4.13.2",
     "@vue/compiler-sfc": "3.0.7",
